compiler/typ/tests/fixtures/diagnostics/0700_fcm_hidden_value_to_int_consumer_04.ml.infer.expected
File "0700_fcm_hidden_value_to_int_consumer_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0700_fcm_hidden_value_to_int_consumer_04 is not a valid module name.

File "0700_fcm_hidden_value_to_int_consumer_04.ml", line 10, characters 20-27:
10 |   consume_int_delta M.value
                         ^^^^^^^
Error: The value M.value has type M.t but an expression was expected of type
         int
